--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recordatorios-impuestos": "file:",
+    "resend": "^4.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
